{
    "name": "GameControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "b361f57b-0287-4037-8a50-2106d884b479",
            "actions": [
                {
                    "name": "PauseGame",
                    "type": "Button",
                    "id": "992e91d8-67b5-492d-b996-2a0c75b420fc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ConfirmAction",
                    "type": "Button",
                    "id": "895a83d0-1794-45ac-976b-98b0fe783aed",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ClickPlace",
                    "type": "Button",
                    "id": "381a0ad8-9052-4750-a1bd-2d8b7a1e3e30",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "KeyboardPlace",
                    "type": "Button",
                    "id": "141c4429-5383-4399-8aaf-81e4b0601083",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Flip",
                    "type": "Button",
                    "id": "087a6a84-8d32-49d7-8cc8-2ff4dbcbf496",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateSmooth",
                    "type": "Value",
                    "id": "95013ac6-34f3-419a-ba38-c764f8f05a31",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Rotate90",
                    "type": "Value",
                    "id": "302c2719-33ed-4a4f-9a69-19d26107d9e9",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Arrows",
                    "id": "db914065-d1e9-44b3-85dd-3cb11405980d",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate90",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "0fd1759a-538c-4d9c-a4da-4957a0c7f3e5",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate90",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "480ab4b2-57d9-448f-b094-31131c74bdbc",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate90",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "724ea825-9e7d-438f-9c74-f0c6c6b63a0d",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateSmooth",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ba1744d9-6c8c-4b5b-be32-39e721166d6b",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ConfirmAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "102957bc-a549-44f8-affb-66f1f1324d06",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ConfirmAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9d6ff9b9-8254-4936-b7f4-5af3a27086ce",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "ClickPlace",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f85c798-da5c-43a3-adef-fd3fa43e1091",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Flip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ffdc5b6c-cacc-435b-ad1e-3bf98a7b0135",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Flip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fc291727-7714-4e3c-a429-08f44635ccd0",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Flip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "92dda827-d4c3-4381-8332-e82ea1b2c072",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "44ea8668-3399-4831-ae44-568e367f2efb",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardPlace",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "44052b29-5486-4bd5-a306-c3e3c3c7e35b",
            "actions": [
                {
                    "name": "ResumeGame",
                    "type": "Button",
                    "id": "cd3fbcb3-59e6-4f80-94ed-5eb5b8c8ec1a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dc59ca69-e0bd-4da2-84d5-940979d06d75",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ResumeGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}